--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "livereload": "^0.9.1",
     "mongoose": "^5.9.29",
     "morgan": "~1.9.1",
+    "quill": "^1.3.6",
     "save": "^2.4.0"
   }
 }
