--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "livereload": "^0.9.1",
     "mongoose": "^5.9.29",
     "morgan": "~1.9.1",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
     "save": "^2.4.0"
   }
 }
