--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "livereload": "^0.9.1",
     "mongoose": "^5.9.29",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "quill": "^1.3.7",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "sharp": "^0.25.4",
+    "uuid": "^8.3.0"
   }
 }
